# CudaBox

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json
benchmarks/: bench_softmax.py  utils.py
benchmarks/results/: softmax-performance.csv
csrc/elementwise/: CMakeLists.txt
csrc/elementwise/src/: elementwise_ops.cpp
csrc/elementwise/src/softmax/: softmax.cu
csrc/gemm/src/: simple_gemm.cu  tiled_gemm.cu
include/: cuda_utils.cuh  cudabox_ops.hpp
profiler/: profile_softmax.py
python/cudabox/: __init__.py  elementwise.py
scripts/local/: build.sh
tests/: test_softmax.py
